Fixed: Text in native select in dialog is too low.

--- a/skins/moono/dialog.css
+++ b/skins/moono/dialog.css
@@ -708,7 +708,7 @@ select.cke_dialog_ui_input_select
 	background-color: #fff;
 	border: 1px solid #c9cccf;
 	border-top-color: #aeb3b9;
-	padding: 4px 6px;
+	padding: 2px 6px;
 
 	outline: none;
 
